Assignment2/style/style.css
 /* Reset */
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }

 body {
   margin: 0rem;
 }

 h2 {
   margin: 0rem 0 0;
 }

 #myCanvas {
   border: solid 3px green;
   width: 100%;
   height:100%;
   background: black;
 }

 /* Flexbox Example */
 .flexbox {
   display: flex;
 }

 .flexbox .stretch {
   flex: 1;
   border: solid 1px green;
 }

 .flexbox .normal {
   flex: 0;
   margin: 0 0 0 0;
  border:solid 1px green;


 }

 .flexbox div input {
   padding: 2.5em 1em;
   width: 100%;
   background-color:black;
   border:solid 1px green;
   font-family: "courier";
   color: green;
   outline:none;
 }

 .flexbox div button {
   padding: 2.5em 4em;
   white-space: nowrap;
   background-color:black;
   border:solid 1px green;
   font-family: "courier";
   color: green;
   outline:none;
 }

 .flexbox div button:hover{
   background-color:green;
   border:solid 1px green;
   color: black;
 }

 .bottomnav {
   position: absolute;
   bottom: 0;
   width: 100%;

 }

